<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/off"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/off"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:backgroundTint="@color/Lavender"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="3dp"
            android:layout_columnWeight="1">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/c"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:backgroundTint="@color/Lavender"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="3dp"
            android:layout_columnWeight="1">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/percent"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:backgroundTint="@color/Lavender"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_margin="3dp"
            android:layout_columnWeight="1">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:backgroundTint="@color/Lavender"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_margin="3dp"
            android:layout_columnWeight="1">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_7"
            android:textColor="#448AFF"
            android:textSize="25sp"
            app:strokeColor="@color/Lavender"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:text="@string/_8"
            android:textColor="@color/Lavender"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/Lavender"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:text="@string/_9"
            android:textColor="@color/Lavender"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/Lavender"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:backgroundTint="@color/Lavender"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_marginStart="3dp"
            android:layout_columnWeight="1">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:text="@string/_4"
            android:textColor="@color/Lavender"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/Lavender"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:text="@string/_5"
            android:textColor="@color/Lavender"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/Lavender"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:text="@string/_6"
            android:textColor="@color/Lavender"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/Lavender"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/subtract"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/subtract"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:backgroundTint="@color/Lavender"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_marginStart="3dp"
            android:layout_columnWeight="1">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:text="@string/_1"
            android:textColor="@color/Lavender"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/Lavender"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:text="@string/_2"
            android:textColor="@color/Lavender"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/Lavender"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:text="@string/_3"
            android:textColor="@color/Lavender"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/Lavender"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/addition"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:backgroundTint="@color/Lavender"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_margin="3dp"
            android:layout_columnWeight="1">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:text="@string/_0"
            android:textColor="@color/Lavender"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/Lavender"
            app:strokeWidth="3dp">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPoint"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:text="@string/point"
            android:textColor="@color/white"
            android:padding="2dp"
            android:backgroundTint="@color/Lavender"
            app:strokeColor="@color/Lavender"
            android:layout_marginLeft="3dp"
            >

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/equal"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:backgroundTint="@color/Lavender"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_marginStart="3dp"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1">

        </com.google.android.material.button.MaterialButton>
    </GridLayout>
</RelativeLayout>